--- a/package.json
+++ b/package.json
@@ -9,17 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@motionone/utils": "^10.17.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "fontfaceobserver": "^2.3.0",
+    "framer-motion": "^10.16.16",
+    "locomotive-scroll": "^5.0.0-beta.11",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.3",
+    "normalize-wheel": "^1.0.1",
+    "react": "^18.2.0",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-fast-marquee": "^1.6.2",
+    "react-hook": "^0.0.1",
+    "react-intersection-observer": "^9.5.3",
+    "react-use": "^17.4.2",
+    "recoil": "^0.7.7",
+    "scroller-motion": "^1.2.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "wipe.css": "^1.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
