--- a/package.json
+++ b/package.json
@@ -1,1 +1,57 @@
-{"name":"portfolio","version":"0.1.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"@hookform/resolvers":"^3.3.4","@motionone/utils":"^10.17.0","@radix-ui/react-accordion":"^1.1.2","@radix-ui/react-avatar":"^1.0.4","@radix-ui/react-label":"^2.0.2","@radix-ui/react-select":"^2.0.0","@radix-ui/react-slot":"^1.0.2","@types/nodemailer":"^6.4.14","class-variance-authority":"^0.7.0","clsx":"^2.1.0","embla-carousel-autoplay":"^8.0.0-rc19","embla-carousel-react":"^8.0.0-rc19","fontfaceobserver":"^2.3.0","framer-motion":"^10.16.16","locomotive-scroll":"^5.0.0-beta.11","lucide-react":"^0.309.0","next":"14.0.3","nodemailer":"^6.9.8","normalize-wheel":"^1.0.1","react":"^18.2.0","react-dom":"^18","react-fast-marquee":"^1.6.2","react-hook":"^0.0.1","react-hook-form":"^7.49.3","react-icons":"^5.0.1","react-intersection-observer":"^9.5.3","react-type-animation":"^3.2.0","react-use":"^17.4.2","recoil":"^0.7.7","scroller-motion":"^1.2.3","tailwind-merge":"^2.2.0","tailwindcss-animate":"^1.0.7","wipe.css":"^1.3.0","zod":"^3.22.4"},"devDependencies":{"@types/locomotive-scroll":"^4.1.3","@types/node":"^20","@types/react":"^18","@types/react-dom":"^18","autoprefixer":"^10.0.1","postcss":"^8","tailwindcss":"^3.3.0","typescript":"^5"}}
+{
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@motionone/utils": "^10.17.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/nodemailer": "^6.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc19",
+    "embla-carousel-react": "^8.0.0-rc19",
+    "fontfaceobserver": "^2.3.0",
+    "framer-motion": "^10.16.16",
+    "locomotive-scroll": "^5.0.0-beta.11",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.3",
+    "nodemailer": "^6.9.8",
+    "normalize-wheel": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
+    "react-hook": "^0.0.1",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.5.3",
+    "react-type-animation": "^3.2.0",
+    "react-use": "^17.4.2",
+    "recoil": "^0.7.7",
+    "scroller-motion": "^1.2.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "wipe.css": "^1.3.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
+}
