--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "framer-motion": "^10.16.16",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.309.0",
-    "next": "14.0.3",
+    "next": "^14.2.25",
     "nodemailer": "^6.9.8",
     "normalize-wheel": "^1.0.1",
     "react": "^18.2.0",
